# vesc_tool

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  MSVC-build-vesc_tool-release.ps1  README.md  VESC Favicon.icns  application.pri  bleuart.cpp  bleuart.h  bleuartdummy.cpp  bleuartdummy.h  boardsetup.h  boardsetupwindow.cpp  boardsetupwindow.h  boardsetupwindow.ui  build_all  build_android  build_cp_esp_fw  build_cp_fw  build_ios.sh  build_lin  build_lin_original_only  build_macos  build_test_versions  build_win  build_win4CI.ps1  build_win_original_only  checklist_release.txt  cla_vesc_tool.md  cla_vesc_tool.odt  codeloader.cpp  codeloader.h  commands.cpp  commands.h  configparam.cpp  configparam.h  configparams.cpp  configparams.h  convert_signal_slot2.py  (+76 more)
QCodeEditor/: qcodeeditor.pri
android/: AndroidManifest.xml  AndroidManifest.xml.in  build.gradle  gradlew
application/: README.md  create_app  test
desktop/: AppAdcPage.qml  AppGeneralPage.qml  AppImuPage.qml  AppNrfPage.qml  AppNunchukPage.qml  AppPasPage.qml  AppPpmPage.qml  AppUartPage.qml  BmsPage.qml  CanAnalyzerPage.qml  ConnectionPage.qml  ControllersPage.qml  DisplayToolPage.qml  ExperimentPlotPage.qml  ExperimentsPage.qml  FirmwarePage.qml  FocPage.qml  ImuPage.qml  LispPage.qml  LogAnalysisPage.qml  MotorComparisonPage.qml  MotorGeneralPage.qml  MotorInfoPage.qml  PackagesPage.qml  ParamEditBitfield.qml  ParamEditBool.qml  ParamEditDouble.qml  ParamEditEnum.qml  ParamEditInt.qml  ParamEditSeparator.qml  ParamEditString.qml  ParamEditors.qml  ParamGroupPage.qml  PlotLegend.qml  RtDataPage.qml  SampledDataPage.qml  ScriptingPage.qml  TerminalPage.qml  Vesc3DView.qml  WelcomePage.qml  (+2 more)
display_tool/: dispeditor.cpp  dispeditor.h  dispeditor.ui  display_tool.pri  displayedit.cpp  displayedit.h  imagewidgetdisp.cpp  imagewidgetdisp.h
esp32/: esp32.pri  esp32flash.cpp  esp32flash.h  esp_loader.c  esp_loader.h  esp_loader_error.h  esp_loader_io.h  esp_loader_protocol.h  esp_sdio_stubs.c  esp_stubs.c  esp_stubs.h  esp_targets.c  md5_ctx.h  protocol.h  protocol_prv.h  protocol_sdio.c  protocol_serial.c  protocol_spi.c  protocol_uart.c  sip.h  slip.c  slip.h
heatshrink/: heatshrink.pri  heatshrink_config.h  heatshrink_encoder.h  heatshrinkif.cpp  heatshrinkif.h
ios/: AppIcon.icns  Info.plist  MyLaunchScreen.storyboard  MyLaunchScreen.xib  VTLaunchScreen.xib  iOS-Info.plist  iTunesArtwork  iTunesArtwork@2x  vesc_tool.xcconfig
lzo/: lzo.pri  minilzo.c
lzokay/: lzokay.cpp  lzokay.pri
macos/: Info.plist  appIcon-backup.icns  appIcon.icns
maddy/: .editorconfig  .gitignore  AUTHORS  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  blockparser.h  checklistparser.h  codeblockparser.h  emphasizedparser.h  headlineparser.h  imageparser.h  italicparser.h  latexblockparser.h  linkparser.h  maddy.pri  orderedlistparser.h  paragraphparser.h  parser.h  parserconfig.h  quoteparser.h  strikethroughparser.h  strongparser.h
map/: carinfo.cpp  carinfo.h  copterinfo.cpp  copterinfo.h  locpoint.cpp  locpoint.h  map.pri  mapwidget.cpp  mapwidget.h  osmclient.cpp  osmclient.h  osmtile.cpp  osmtile.h  perspectivepixmap.cpp  perspectivepixmap.h
minimp3/: minimp3.pri  qminimp3.cpp  qminimp3.h
mobile/: AdcMap.qml  BMS.qml  BleSetupDialog.qml  CanScreen.qml  ConfigPageApp.qml  ConfigPageCustom.qml  ConfigPageMotor.qml  ConnectBle.qml  ConnectBleForm.ui.qml  ConnectScreen.qml  Controls.qml  CustomGauge.qml  CustomGaugeV2.qml  DetectBldc.qml  DetectFocEncoder.qml  DetectFocHall.qml  DetectFocParam.qml  DetectIMU.qml  DirectionSetup.qml  DirectoryPicker.qml  DoubleSpinBox.qml  FilePicker.qml  FwUpdate.qml  ImageButton.qml  Lisp.qml  LogBox.qml  MultiSettings.qml  NrfPair.qml  Packages.qml  PairingDialog.qml  ParamEditBitfield.qml  ParamEditBool.qml  ParamEditDouble.qml  ParamEditEnum.qml  ParamEditInt.qml  ParamEditSeparator.qml  ParamEditString.qml  ParamEditors.qml  ParamList.qml  ParamListScroll.qml  (+35 more)
pages/: pageappadc.cpp  pageappadc.h  pageappadc.ui  pageappbalance.cpp  pageappbalance.h  pageappbalance.ui  pageappgeneral.cpp  pageappgeneral.h  pageappgeneral.ui  pageappimu.cpp  pageappimu.h  pageappimu.ui  pageappnrf.cpp  pageappnrf.h  pageappnrf.ui  pageappnunchuk.cpp  pageappnunchuk.h  pageappnunchuk.ui  pageapppas.cpp  pageapppas.h  pageapppas.ui  pageappppm.cpp  pageappppm.h  pageappppm.ui  pageappsettings.cpp  pageappsettings.h  pageappsettings.ui  pageappuart.cpp  pageappuart.h  pageappuart.ui  pagebldc.cpp  pagebldc.h  pagebldc.ui  pagebms.cpp  pagebms.h  pagebms.ui  pagecananalyzer.cpp  pagecananalyzer.h  pagecananalyzer.ui  pageconnection.cpp  (+84 more)
pkgs/: default.nix
qmarkdowntextedit/: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  linenumberarea.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  markdownhighlighter.cpp  markdownhighlighter.h  qmarkdowntextedit-headers.pri  qmarkdowntextedit-lib.pro  qmarkdowntextedit-sources.pri  qmarkdowntextedit.cpp  qmarkdowntextedit.h  qmarkdowntextedit.pc.in  qownlanguagedata.cpp  qownlanguagedata.h  qplaintexteditsearchwidget.cpp  qplaintexteditsearchwidget.h
qmarkdowntextedit/examples/qml/: example.cpp  example.qml  ressources.qrc
qmarkdowntextedit/scripts/: clang-format-project.sh
qmarkdowntextedit/trans/: qmarkdowntextedit_es.qm  qmarkdowntextedit_es.ts  qmarkdowntextedit_zh_CN.qm  qmarkdowntextedit_zh_CN.ts
res/: CHANGELOG  CHANGELOG.md  info.xml  parameters_appconf.xml  parameters_mcconf.xml
widgets/: adcmap.cpp  adcmap.h  adcmap.ui  aspectimglabel.cpp  aspectimglabel.h  batterycalculator.cpp  batterycalculator.h  batterycalculator.ui  batttempplot.cpp  batttempplot.h  canlistitem.cpp  canlistitem.h  detectallfocdialog.cpp  detectallfocdialog.h  detectallfocdialog.ui  detectbldc.cpp  detectbldc.h  detectbldc.ui  detectfoc.cpp  detectfoc.h  detectfoc.ui  detectfocencoder.cpp  detectfocencoder.h  detectfocencoder.ui  detectfochall.cpp  detectfochall.h  detectfochall.ui  detectimu.cpp  detectimu.h  detectimu.ui  dirsetup.cpp  dirsetup.h  dirsetup.ui  displaybar.cpp  displaybar.h  displaypercentage.cpp  experimentplot.cpp  (+63 more)
(+308 files in other folders)
